// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requestPages creates correct request window for 1 page 1`] = `
Array [
  Object {
    "offset": Array [
      0,
      0,
    ],
    "size": Array [
      100,
      1000,
    ],
  },
]
`;

exports[`requestPages creates request windows for 3 pages 1`] = `
Array [
  Object {
    "offset": Array [
      0,
      0,
    ],
    "size": Array [
      100,
      1000,
    ],
  },
  Object {
    "offset": Array [
      100,
      0,
    ],
    "size": Array [
      100,
      1000,
    ],
  },
  Object {
    "offset": Array [
      200,
      0,
    ],
    "size": Array [
      100,
      1000,
    ],
  },
]
`;
